--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.4",
+    "mongoose-title-case": "0.0.4",
+    "mongoose-validator": "^2.0.1",
     "morgan": "^1.9.0",
     "semantic-ui": "^2.2.14"
   }
