--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "mongoose-title-case": "0.0.4",
     "mongoose-validator": "^2.0.1",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.4.2",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "semantic-ui": "^2.2.14"
   }
 }
