--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "mongoose-validator": "^2.0.1",
     "morgan": "^1.9.0",
     "nodemailer": "^4.4.2",
-    "nodemailer-sendgrid-transport": "^0.2.0",
-    "semantic-ui": "^2.2.14"
+    "nodemailer-sendgrid-transport": "^0.2.0"
   }
 }
