--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "mocha --timeout 10000"
+    "test": "scripts/popDB.sh && mocha --timeout 10000"
   },
   "author": "",
   "license": "ISC",
