--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose-validator": "^2.0.1",
     "morgan": "^1.9.0",
     "nodemailer": "^4.4.2",
-    "nodemailer-sendgrid-transport": "^0.2.0"
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "tablesort": "^5.0.2"
   }
 }
